@@ -30,6 +30,7 @@ import io.opentelemetry.instrumentation.annotations.SpanAttribute;
 import io.opentelemetry.instrumentation.annotations.WithSpan;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -296,11 +297,6 @@ public class ClientsExecutor {
 		final String[] selectColumnArray,
 		final boolean logMode
 	) throws InterruptedException, ExecutionException, TimeoutException {
-		final String privacyType = protocol.getPrivacy() != SnmpConfiguration.Privacy.NO_ENCRYPTION &&
-			protocol.getPrivacy() != null
-			? protocol.getPrivacy().name()
-			: null;
-
 		// Create the SNMPClient and run the GetNext request
 		return (T) execute(
 			() -> {
@@ -310,12 +306,12 @@ public class ClientsExecutor {
 					protocol.getVersion().getIntVersion(),
 					null,
 					protocol.getCommunity(),
-					protocol.getVersion().getAuthType(),
-					protocol.getUsername(),
-					protocol.getPassword() != null ? new String(protocol.getPassword()) : null,
-					privacyType,
-					protocol.getPrivacyPassword() != null ? new String(protocol.getPrivacyPassword()) : null,
-					protocol.getContextName(),
+					null,
+					null,
+					null,
+					null,
+					null,
+					null,
 					null
 				);
 
@@ -778,7 +774,7 @@ public class ClientsExecutor {
 		try {
 			String urlSpec = String.format("%s://%s:%d", wbemConfig.getProtocol().toString(), hostname, wbemConfig.getPort());
 
-			final URL url = new URL(urlSpec);
+			final URL url = new URI(urlSpec).toURL();
 
 			trace(() ->
 				log.trace(
